assets/styles/main.css
/* ... */
.card-menu {
    align-self: flex-end;
    position: absolute;
} 

.partners-logo {
    height: 150px;
}

.partners .row .btn {
    background-color: var(--primary-green);
}

.partner-container {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin-bottom: 50px;
}

.partner-container a {
    margin-top: 20px;
}

.whatWeDo-logo {
    height: 50px;
}

.whatWeDo .card-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.whatWeDo .card-content span {
    margin-top: 10px;
}

.contactUs {
    background-color: var(--primary-green);
}

.social a img.social-icon {
    height: 60px;
    cursor: pointer;
    position: relative;
    margin-right: 50px;
}

.social a:last-of-type img.social-icon {
    margin-right: 0;
}

.contactUs .social {
    margin: auto;
    padding: 40px 0;
    text-align: center;
}

.contactUs .social-icon:hover {
    border: 2px solid white;
    border-radius: 80%;
    box-sizing: border-box;
}

.contactUs .col.mail {
    display: flex;
    justify-content: flex-start;
}

.contactUs .col {
    display: flex;
    justify-content: flex-end;
}

.ourStory p, .technology p, .socialGood p, .sponsor p, .palla p {
    margin-top: 50px;
    font-size: 18px;
}

.socialGood {
    margin-top: 50px;
}

li a i.right {
    margin-left: 0;
}

.dropdown-content#dropdown1 li a {
    color: var(--darker-green)
}

.technology .tapinlogo, .palla .pallalogo {
    height: 150px;
}

.technology .image, .palla .image {
    text-align: center;
    margin-top: 50px;
}

.palla {
    margin-top: 50px;
}

.technology p {
    margin-top: 50px;
}

.technology .phone {
    margin-top: 100px;
    
}

.technology .phoneImage, .technology .phoneImage2 {
    text-align: left;
}

.technology .phone ul {
    padding: 0 50px;
}

.technology .phone ul li {
    margin-bottom: 30px;
    font-size: 18px;
    list-style: none;
}

.technology .phone ul li .dot {
    background-color: var(--primary-green);
    height: 10px;
    width: 10px;
    border-radius: 50%;
    display: inline-block;
}

.technology .phone ul li span {
    font-size: 14px;
}

.technology {
    padding-bottom: 50px;
}

.phone1 {
    width: 80%;
}

.phone2 {
    width: 100%;
}

.ourTeam .person {
    text-align: center;
}

.ourTeam .person .name {
    font-size: 20px;
}

.ourTeam .person .title {
    font-size: 18px;
    font-style: italic;
}

.ourTeam .person .subtitle {
    font-style: italic;
}

.ourTeam .person .subtitle, .ourTeam .person .title, .ourTeam .person .name{
    margin: 5px 0;
}

.sticker {
    height: 50px;
}

table td{
    text-align: center;
}

ul.indicators {
    background-color: var(--primary-green);
}

.authorPic {
    height: 50px;
}

.testimonial-card {
    border-radius: 5px;
    text-align: center;
    margin-bottom: 100px;
    min-height: 560px;
}

.testimonial-card .title {
    min-height: 50px;
}

.testimonial-card .pic {
    border-radius: 50%;
    border: 3px solid;
    height: 150px;
    width: 150px;
    margin-top: -75px;
}

.testimonial-card img.stars {
    width: 25%;
    margin-bottom: 50px;
}

.testimonial-card#tomasso .title {
    color: lightcoral;
}

.testimonial-card#tomasso .pic {
    border-color:lightcoral;
}

.testimonial-card#markspalding .title {
    color: orange;
}

.testimonial-card#markspalding .pic {
    border-color:orange;
}

.testimonial-card#test3 .title {
    color: skyblue;
}

.testimonial-card#test3 .pic {
    border-color:skyblue;
}

.testimonials .row {
    margin-top: 150px;
}

.testimonial-card .content {
    text-align: left;
    margin: auto;
    width: 80%;
    margin-bottom: 20px;
    min-height: 200px;
    font-style: italic;
}

div.mapContainer {
    display: flex;
    justify-content: space-around;
    padding-bottom: 100px;
}

.legend ul li {
    display: flex;
    align-items: center;
}

.legend ul li p {
    margin-left: 10px;
}

.color {
    width: 40px;
    height: 20px;
    border-radius: 10%;
}

.colorHigh {
    background-color: #2C6919;
}

.colorLow {
    background-color: #83CC83;
}

.colorNone {
    background-color: #D6D6D6;
}

.types {
    margin-top: 50px;
}

.types .typesTable, .types .typesTableMobile {
    margin-top: 50px;
}

.types .typesTable img {
    height: 100px;
}

.types .typesTable img.team {
    height: 85px;
}

.types .typesTable td {
    border: 1px solid lightgrey;
    font-family: var(--header-font);
    font-weight: 300;
}

.types .typesTable tr.descriptions {
    font-style: italic;
}

.types .typesTable tr.headers td {
    font-weight: 500;
}

.optionsTable {
    margin-top: 50px;
}

.optionsTable img {
    height: 100px;
}

.optionsTable tr td:first-of-type {
    border-right: 1px solid grey;
    width: 25%;
}

.optionsTable p {
    font-style: italic;
}

.optionsTable tr:nth-of-type(2n) td:nth-of-type(2) {
    padding: 25px 100px;
    text-align: left;
}

.optionsTable tr:last-of-type td {
    color: var(--primary-green);
    padding: 25px 100px;
}

.optionsTableMobile tr:last-of-type td {
    color: var(--primary-green);
}

.optionsTableMobile {
    display: none;
}

.optionsTableMobile img {
    height: 100px;
}

@media only screen and (max-width: 500px) {
    .optionsTable {
        display: none;
    }

    .optionsTableMobile {
        display: table;
    }
}

.playerCards .container > p, .tapinLeagues .container > p, .ourTeam .container > p  {
    font-size: 20px;
}

.playerCards .image img{
    width: 200px;
}

.playerCards .cardContainer{
   text-align: center;
}

.playerCards .cardContainer p.title{
   font-size: 20px;
}

.news .row a:nth-child(1) .news-card {
    background: linear-gradient( rgba(255, 255, 255, .3), rgba(0, 0, 0, 0.7) ), url('/images/news/news1.png') no-repeat center/cover;
}

.news .row a:nth-child(2) .news-card {
    background: linear-gradient( rgba(255, 255, 255, .3), rgba(0, 0, 0, 0.7) ), url('/images/news/news2.png') no-repeat center/cover;
}
/* ... */

